Primeiro envio dos códigos

--- a/cadastro.html
+++ b/cadastro.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Faça seu cadastro no Programa Viajar Mais e comece a viajar com descontos">
-    <title>Cadastro - Programa Viajar Mais</title>
+    <meta name="description" content="Faça seu cadastro no Programa Viaja + e comece a viajar com descontos">
+    <title>Cadastro - Programa Viaja +</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,9 +12,8 @@
     <header class="header">
         <div class="container header-container">
             <div class="logo">
-                <div class="logo-texto">
-                    <span class="logo-titulo">Viajar Mais</span>
-                    <span class="logo-subtitulo">Governo Federal</span>
+                <div class="logo-imagem">
+                    <img src="./img/logo.png" alt="Viaja +" class="logo-programa">
                 </div>
             </div>
             
@@ -486,7 +485,7 @@
                             <span>
                                 Declaro que li e concordo com os 
                                 <a href="como-participar.html" style="color: var(--cor-azul-governo); text-decoration: underline;">
-                                    termos e condições do Programa Viajar Mais
+                                    termos e condições do Programa Viaja +
                                 </a> 
                                 e que as informações fornecidas são verdadeiras. 
                                 <span class="obrigatorio">*</span>
@@ -531,7 +530,7 @@
                 <div class="footer-secao">
                     <h3>Sobre o Programa</h3>
                     <p>
-                        O Viajar Mais é uma iniciativa do Governo Federal para democratizar 
+                        O Viaja + é uma iniciativa do Governo Federal para democratizar 
                         o acesso ao turismo interno brasileiro.
                     </p>
                 </div>
@@ -557,7 +556,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2025 Programa Viajar Mais - Governo Federal do Brasil.</p>
+                <p>&copy; 2025 Programa Viaja + - Governo Federal do Brasil.</p>
             </div>
         </div>
     </footer>
