--- a/viagens.html
+++ b/viagens.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Descubra destinos incríveis em todas as regiões do Brasil com descontos do Programa Viajar Mais">
-    <title>Destinos - Programa Viajar Mais</title>
+    <meta name="description" content="Descubra destinos incríveis em todas as regiões do Brasil com descontos do Programa Viaja +">
+    <title>Destinos - Programa Viaja +</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,9 +12,8 @@
     <header class="header">
         <div class="container header-container">
             <div class="logo">
-                <div class="logo-texto">
-                    <span class="logo-titulo">Viajar Mais</span>
-                    <span class="logo-subtitulo">Governo Federal</span>
+                <div class="logo-imagem">
+                    <img src="./img/logo.png" alt="Viaja +" class="logo-programa">
                 </div>
             </div>
             
@@ -377,7 +376,7 @@
                 <div class="footer-secao">
                     <h3>Sobre o Programa</h3>
                     <p>
-                        O Viajar Mais é uma iniciativa do Governo Federal para democratizar 
+                        O Viaja + é uma iniciativa do Governo Federal para democratizar 
                         o acesso ao turismo interno brasileiro.
                     </p>
                 </div>
@@ -403,7 +402,7 @@
             </div>
             
             <div class="footer-bottom">
-                <p>&copy; 2025 Programa Viajar Mais - Governo Federal do Brasil.</p>
+                <p>&copy; 2025 Programa Viaja + - Governo Federal do Brasil.</p>
             </div>
         </div>
     </footer>
